--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/js/admin.js": "/js/admin.js",
     "/css/blue.png": "/css/blue.png",
     "/css/front.css": "/css/front.css",
-    "/js/front.js": "/js/front.js"
+    "/js/front.js": "/js/front.js",
+    "/js/404.js": "/js/404.js"
 }
